--- a/slides/talk4_PointClustering.Rmd
+++ b/slides/talk4_PointClustering.Rmd
@@ -1,13 +1,17 @@
 ---
-title: "Картографические базы данных"
+title: "Концептуальные модели картографической генерализации"
+subtitle: "Картографические базы данных. Лекция №3"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
 output:
- ioslides_presentation:
-   widescreen: yes
-   variant: markdown+link_attributes
-  # xaringan::moon_reader:
-  #   css: [default, metropolis, metropolis-fonts]
+  xaringan::moon_reader:
+    css: [default, "style.css"]
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      highlightLines: true
+      countIncrementalSlides: false
+      ratio: "16:9"
 ---
 
 ## Генерализация множеств точечных объектов
@@ -23,17 +27,15 @@ output:
 
 **Методы генерализации**
 
-1. Регионизация
 1. Отбор
 1. Кластеризация
+1. Регионизация
 
 **Аспекты**
 
 1. Вспомогательные геометрические структуры
 1. Параметризация алгоритмов
 1. Оценка результатов
-
-
 
 ## Триангуляция Делоне и диаграмма Вороного
 
@@ -108,160 +110,6 @@ output:
   <!-- ![](voronoi_mnh.svg) -->
 </div>
 
-
-
-## Регионизация точек
-
-**Методы регионизации:**
-
-1. Ограничивающие прямоугольники
-2. Выпуклая оболочка
-3. Невыпуклые оболочки ($\alpha$-shape, $\chi$-shape)
-
-
-
-## Ограничивающий прямоугольник (envelope)
-
-<img src="envelope.png" width="800">
-<!-- ![](envelope.png){width=800px} -->
-
-- Наиболее простой тип оболочки, который используется в ГИС для описания территориального охвата слоя (*экстент*)
-
-- Для построения в общем случае нужно 4 точки, которые обладают минимальным и максимальным значением координат из всего множества
-
-
-
-## Выпуклая оболочка (convex hull)
-
-<img src="chull.png" width="400">
-<!-- ![](chull.png){width=400px} -->
-
-- **Выпуклой оболочкой** множества $p$ называется
-наименьшее выпуклое множество, содержащее $p$
-
-- Выпуклая оболочка обозначается как $Conv(p)$
-
-- Выпуклая оболочка на плоскости является *пересечением всех полуплоскостей, содержащих* $p$
-
-- Существует несколько алгоритмов построения $Conv(p)$
-
-
-
-## Выпуклая оболочка
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  **Аналогия**
-
-  Представьте себе лассо, которое накидывается на множество гвоздей, битых в доску:
-  ![](lasso.png){width=330px}
-  
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  **Выпуклое и невыпуклое**
-
-  *Выпуклое множество* в аффинном или векторном пространстве — множество, содержащее вместе с любыми двумя точками соединяющий их отрезок:
-  
-  <img src="convex_concave.png" width="400">
-  <!-- ![](convex_concave.png) -->
-</div>
-
-
-
-## Выпуклая оболочка
-
-**Алгоритм Джарвиса**
-
-<div style="display: inline-block; width: 55%; vertical-align: top;">
-
-  1. Найти точку $p_0$ с наименьшим значением координаты $X$. Добавить в результат.
-  2. Найти точку $p_1$, образующую наименьший угол поворота по часовой стрелке относительно направления оси $Y$. Добавить в результат.
-  3. Найти все оставшиеся точки выпуклой оболочки $p_i, i = 2..k$, выбирая каждый раз такую точку $p_i$, что угол поворота от $p_{i-2} p_{i-1}$ к $p_{i-2} p_{i-1}$ наименьший. Остановиться, когда $p_i = p_0$
-
-</div>
-
-<div style="display: inline-block; width: 40%; vertical-align: top; margin-left: 2%">
-  ![](jarvis.png)
-</div>
-
-**Jarvis, R. A.** (1973). *On the identification of the convex hull of a finite set of points in the plane*. Information Processing Letters 2: 18–21. doi:10.1016/0020-0190(73)90020-3.
-
-## Выпуклая оболочка
-
-**Алгоритм Джарвиса**
-
-![](jarvis.gif)
-
-**Jarvis, R. A.** (1973). *On the identification of the convex hull of a finite set of points in the plane*. Information Processing Letters 2: 18–21. doi:10.1016/0020-0190(73)90020-3.
-
-
-## Минимальный по площади ограничивающий прямоугольник
-
-**Минимальный по площади ограничивающий прямоугольник** (*minimum bounding rectangle  MBR*) является наименьшим по площади среди всех прямоугольников, охватывающих данное множество точек
-
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  ![](mbr.png)
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  Согласно теореме Фримана-Шапиро *одна из сторон MBR должна касаться выпуклой оболочки*.
-
-  **Freeman, H.; Shapira, R.** (1975), *Determining the minimum-area encasing rectangle for an arbitrary closed curve*. Communications of the ACM, 18: 409–413, MR 0375828, doi:10.1145/360881.360919.
-</div>
-
-
-
-
-## Алгоритм Rotating Calipers
-
-Поворачиваем ограничивающий прямоугольник, совмещая его с одной из сторон выпуклой оболочки. Из них выбираем минимальный по площади.
-
-![](calipers.png){width=700px}
-
-**G.T.Toussaint** (1983). *Solving geometric problems with the rotating calipers*. Proceedings of IEEE MELECON'83, Athens, Greece, May 1983, pp. A10. 02/1-4.
-
-
-
-## Альфа-оболочка
-
-**Альфа-оболочка ($\alpha$-shape)**  обобщение понятия выпуклой оболочки, позволяющее строить оболочки, более точно описывающие форму множества, в том числе и вогнутые оболочки. Альфа-оболочка является площадной компонентой *альфа-комплекса ($\alpha$-complex)*, который строится на основе триангуляции Делоне множества точек.
-
-![](ashape.png){width=600px}
-
-**Edelsbrunner H, Kirkpatrick D, Seidel R **(1983) *On the shape of a set of points in the plane*. IEEE Transactions on Information Theory, 29:551–559. doi: 10.1109/TIT.1983.1056714
-
-
-
-## Альфа-комплекс
-
-**Альфа-комплекс ($\alpha$-complex)**  подмножество триангуляции Делоне, включающее узлы, а также ребра и треугольники, существующие при заданном радиусе диска $r= 1/\alpha$ (при $\alpha > 0$).
-
-![](acomplex.png){width=900px}
-
-- При увеличении радиуса диска происходит образование и исчезновение циклов.
-
-- При $\alpha = 0$ объединение треугольников альфа-комплекса совпадает с *выпуклой оболочкой* множества точек.
-
-
-
-## Типы альфа-комплексов
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  **Стандартный**
-
-  $\alpha = const$
-
-  ![](acomplex_std.png)
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  **Взвешенный**
-
-  $\alpha = f(p)$
-
-  ![](acomplex_wgt.png)
-</div>
-
-
-
 ## Отбор точек
 
 **Алгоритмы отбора:**
@@ -278,8 +126,6 @@ output:
 - статус (ранг) точки
 - расстояние до ближайшей точки
 - эффективная площадь точки (ячейка Вороного)
-
-
 
 ## Алгоритм Settlement-spacing
 
@@ -331,8 +177,6 @@ output:
 
 **Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002.
 
-
-
 ## Алгоритм эффективной площади
 
 <div style="display: inline-block; width: 45%; vertical-align: top;">
@@ -363,8 +207,6 @@ output:
 
 **Деактивация** соседей первого порядка позволяет избежать прореживания множества точек в местах их значительного скопления
 
-
-
 ## Алгоритм взвешенной эффективной площади
 
 Вес точки масштабируется пропорционально ее значимости, а не только эффективной площади: $W_i = С_i \times A_i^{-1}$, где параметр $С_i$ можно представить как средневзвешенную сумму баллов за факторы:
@@ -378,7 +220,6 @@ $$
 **Yan, H. W and Li, Z. L.**, *A Voronoi-based algorithm for point cluster generalization* // Proceedings of 11th International Conference on Geometry and Graphics, August 2004, Guangzhou, 2004.
 
 **Samsonov T., Krivosheina A.**  *Joint generalization of city points and road network for small-scale mapping* // Proceedings of Seventh International Conference on Geographic Information Science GIScience, September 18-21, 2012. — Columbus, Ohio, 2012. — P. 1–7.
-
 
 
 ## Районирование
@@ -399,8 +240,6 @@ $$
 
 **Самсонов Т. Е., Кривошеина А. М.** *Автоматизация отбора населенных пунктов с учетом пространственной неравномерности их распределения для целей мелкомасштабного картографирования* // Известия высших учебных заведений. Геодезия и аэрофотосъемка. — 2015. — № 1. — С. 74–82.
 
-
-
 ## Графическая оценка результатов
 
 **До генерализации:**
@@ -410,7 +249,6 @@ $$
 1 у.е. — пунсон населенного пункта наименьшего класса
 
 
-
 ## Графическая оценка результатов
 
 **После генерализации:**
@@ -418,7 +256,6 @@ $$
 ![](graph_est_dest.png)
 
 1 у.е. — пунсон населенного пункта наименьшего класса
-
 
 
 ## Численная оценка результатов
@@ -437,8 +274,6 @@ $$
 - \> 4 — *уменьшение* густоты
 
 **Topfer, F. and Pillewizer, W.** (1966) *The Principles of Selection*. The Cartographic Journal, 3, 10-16. http://dx.doi.org/10.1179/caj.1966.3.1.10
-
-
 
 ## Численная оценка результатов
 
@@ -463,9 +298,7 @@ $$
 </div>
 
 
-
 ## Кластеризация
-
 
 ## Постановка задачи кластеризации
 
@@ -1110,3 +943,151 @@ $$
 $$
 F_0/F_1 \rightarrow min
 $$
+
+## Регионизация точек
+
+**Методы регионизации:**
+
+1. Ограничивающие прямоугольники
+2. Выпуклая оболочка
+3. Невыпуклые оболочки ($\alpha$-shape, $\chi$-shape)
+
+
+
+## Ограничивающий прямоугольник (envelope)
+
+<img src="envelope.png" width="800">
+<!-- ![](envelope.png){width=800px} -->
+
+- Наиболее простой тип оболочки, который используется в ГИС для описания территориального охвата слоя (*экстент*)
+
+- Для построения в общем случае нужно 4 точки, которые обладают минимальным и максимальным значением координат из всего множества
+
+
+
+## Выпуклая оболочка (convex hull)
+
+<img src="chull.png" width="400">
+<!-- ![](chull.png){width=400px} -->
+
+- **Выпуклой оболочкой** множества $p$ называется
+наименьшее выпуклое множество, содержащее $p$
+
+- Выпуклая оболочка обозначается как $Conv(p)$
+
+- Выпуклая оболочка на плоскости является *пересечением всех полуплоскостей, содержащих* $p$
+
+- Существует несколько алгоритмов построения $Conv(p)$
+
+
+
+## Выпуклая оболочка
+<div style="display: inline-block; width: 45%; vertical-align: top;">
+  **Аналогия**
+
+  Представьте себе лассо, которое накидывается на множество гвоздей, битых в доску:
+  ![](lasso.png){width=330px}
+  
+</div>
+
+<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
+  **Выпуклое и невыпуклое**
+
+  *Выпуклое множество* в аффинном или векторном пространстве — множество, содержащее вместе с любыми двумя точками соединяющий их отрезок:
+  
+  <img src="convex_concave.png" width="400">
+  <!-- ![](convex_concave.png) -->
+</div>
+
+
+
+## Выпуклая оболочка
+
+**Алгоритм Джарвиса**
+
+<div style="display: inline-block; width: 55%; vertical-align: top;">
+
+  1. Найти точку $p_0$ с наименьшим значением координаты $X$. Добавить в результат.
+  2. Найти точку $p_1$, образующую наименьший угол поворота по часовой стрелке относительно направления оси $Y$. Добавить в результат.
+  3. Найти все оставшиеся точки выпуклой оболочки $p_i, i = 2..k$, выбирая каждый раз такую точку $p_i$, что угол поворота от $p_{i-2} p_{i-1}$ к $p_{i-2} p_{i-1}$ наименьший. Остановиться, когда $p_i = p_0$
+
+</div>
+
+<div style="display: inline-block; width: 40%; vertical-align: top; margin-left: 2%">
+  ![](jarvis.png)
+</div>
+
+**Jarvis, R. A.** (1973). *On the identification of the convex hull of a finite set of points in the plane*. Information Processing Letters 2: 18–21. doi:10.1016/0020-0190(73)90020-3.
+
+## Выпуклая оболочка
+
+**Алгоритм Джарвиса**
+
+![](jarvis.gif)
+
+**Jarvis, R. A.** (1973). *On the identification of the convex hull of a finite set of points in the plane*. Information Processing Letters 2: 18–21. doi:10.1016/0020-0190(73)90020-3.
+
+
+## Минимальный по площади ограничивающий прямоугольник
+
+**Минимальный по площади ограничивающий прямоугольник** (*minimum bounding rectangle  MBR*) является наименьшим по площади среди всех прямоугольников, охватывающих данное множество точек
+
+<div style="display: inline-block; width: 45%; vertical-align: top;">
+  ![](mbr.png)
+</div>
+
+<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
+  Согласно теореме Фримана-Шапиро *одна из сторон MBR должна касаться выпуклой оболочки*.
+
+  **Freeman, H.; Shapira, R.** (1975), *Determining the minimum-area encasing rectangle for an arbitrary closed curve*. Communications of the ACM, 18: 409–413, MR 0375828, doi:10.1145/360881.360919.
+</div>
+
+
+
+
+## Алгоритм Rotating Calipers
+
+Поворачиваем ограничивающий прямоугольник, совмещая его с одной из сторон выпуклой оболочки. Из них выбираем минимальный по площади.
+
+![](calipers.png){width=700px}
+
+**G.T.Toussaint** (1983). *Solving geometric problems with the rotating calipers*. Proceedings of IEEE MELECON'83, Athens, Greece, May 1983, pp. A10. 02/1-4.
+
+
+
+## Альфа-оболочка
+
+**Альфа-оболочка ($\alpha$-shape)**  обобщение понятия выпуклой оболочки, позволяющее строить оболочки, более точно описывающие форму множества, в том числе и вогнутые оболочки. Альфа-оболочка является площадной компонентой *альфа-комплекса ($\alpha$-complex)*, который строится на основе триангуляции Делоне множества точек.
+
+![](ashape.png){width=600px}
+
+**Edelsbrunner H, Kirkpatrick D, Seidel R **(1983) *On the shape of a set of points in the plane*. IEEE Transactions on Information Theory, 29:551–559. doi: 10.1109/TIT.1983.1056714
+
+## Альфа-комплекс
+
+**Альфа-комплекс ($\alpha$-complex)**  подмножество триангуляции Делоне, включающее узлы, а также ребра и треугольники, существующие при заданном радиусе диска $r= 1/\alpha$ (при $\alpha > 0$).
+
+![](acomplex.png){width=900px}
+
+- При увеличении радиуса диска происходит образование и исчезновение циклов.
+
+- При $\alpha = 0$ объединение треугольников альфа-комплекса совпадает с *выпуклой оболочкой* множества точек.
+
+
+
+## Типы альфа-комплексов
+<div style="display: inline-block; width: 45%; vertical-align: top;">
+  **Стандартный**
+
+  $\alpha = const$
+
+  ![](acomplex_std.png)
+</div>
+
+<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
+  **Взвешенный**
+
+  $\alpha = f(p)$
+
+  ![](acomplex_wgt.png)
+</div>
