--- a/index.Rmd
+++ b/index.Rmd
@@ -25,5 +25,8 @@ always_allow_html: yes
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, include = FALSE)
 knitr::opts_knit$set(global.par = TRUE)
-knitr::opts_knit$set(root.dir = "data/")
 ```
+
+# Введение {-}
+
+Картографические базы данных
