--- a/03-Points.Rmd
+++ b/03-Points.Rmd
@@ -17,99 +17,103 @@ __Цель задания__ — освоение методики автомат
 
 Задачи:
 
-1. Изучить принципы, заложенные в метод отбора (исключения) точек Settlement Spacing
-2. Реализовать метод Settlement Spacing в среде ArcGIS for Desktop с помощью среды автоматизации процессов геообработки Model Builder.
-3. Реализовать метод оценки графической нагрузки по сетке регулярных квадратов средствами Model Builder
-4. Подготовить слой населенных пунктов субъекта РФ на основе данных OpenStreetMap
-5. Осуществить автоматизированный отбор населенных пунктов для масштаба 1:4 000 000.
+1. Изучить принципы, заложенные в метод отбора (исключения) точек _Settlement Spacing_.
+2. Реализовать метод _Settlement Spacing_ в среде __ArcGIS Desktop__ с помощью среды автоматизации процессов геообработки __Model Builder__.
+3. Реализовать метод оценки графической нагрузки по сетке регулярных квадратов средствами __Model Builder__.
+4. Подготовить слой населенных пунктов субъекта РФ на основе данных _OpenStreetMap_.
+5. Осуществить автоматизированный отбор населенных пунктов для масштаба $1:4~000~000$.
 6. Произвести графическую оценку результатов генерализации.
 
 #### Реализация алгоритма Settlement Spacing {-}
 
 Входные параметры:
 
-1. Точечный слой (Input Points)
-2. Поле веса точки (Importance Field). Выносится в качестве параметра из инструмента Get Field Value (2.2)
-3. Поле сохранения точки (Remain Field). Выносится в качестве параметра из инструмента Calculate Field (6)
-4. Масштабирующий коэффициент (Scale). Вводится как свободный параметр типа Double.
+1. Точечный слой (_Input Points_).
+2. Поле веса точки (_Importance Field_). Выносится в качестве параметра из инструмента __Get Field Value__ (2.2).
+3. Поле сохранения точки (_Remain Field_). Выносится в качестве параметра из инструмента __Calculate Field__ (6).
+4. Масштабирующий коэффициент (_Scale_). Вводится как свободный параметр типа _Double_.
 
 Требования к входным параметрам
-1. Поля, указанные в параметрах Importance Field и Remain Field должны быть уже созданы в слое.
-2. Данные должны быть физически отсортированы в порядке увеличения поля Importance (чем больше значение этого поля, тем менее важной является точка). Для этого можно использовать инструмент Sort.
+1. Поля, указанные в параметрах _Importance Field_ и _Remain Field_ должны быть уже созданы в слое.
+2. Данные должны быть физически отсортированы в порядке увеличения поля `Importance` (чем больше значение этого поля, тем менее важной является точка). Для этого можно использовать инструмент __Sort__.
 3. Поле Remain по умолчанию должно быть пустым или заполненным нулями.
 
-Допустимые значения поля Remain:
-0 — флаг не установлен
-1 — точку необходимо оставить
-2 — точку необходимо убрать
+Допустимые значения поля _Remain_:
+
+$0$ — флаг не установлен
+$1$ — точку необходимо оставить
+$2$ — точку необходимо убрать
 
 __Предусловия:__
-Необходимо расставить предусловия таким образом, чтобы каждый инструмент A, использующий вычисленное значение B, выполнялся после того как вычислится B.
+Необходимо расставить предусловия таким образом, чтобы каждый инструмент __A__, использующий вычисленное значение __B__, выполнялся после того как вычислится __B__.
 
 __Входные данные:__
-Тестирование инструмента производится на примере слоя poppnt_ural (можно вырезать из него небольшой фрагмент из нескольких десятков точек.
+Тестирование инструмента производится на примере слоя `poppnt_ural` (можно вырезать из него небольшой фрагмент из нескольких десятков точек.
 
 __Результат:__
-По результатам выполнения инструмента каждой точке в поле Remain Field должно быть проставлено значение 1 (оставить) или 2 (убрать).
+По результатам выполнения инструмента каждой точке в поле _Remain Field_ должно быть проставлено значение $1$ (оставить) или $2$ (убрать).
 
 __Алгоритм решения задачи:__
 
 1. _Поток 1_
 
-    1.1. Создать слой из точек (Make Feature Layer)
+    1.1. Создать слой из точек (__Make Feature Layer__)
     
-    1.2. Выбрать точки (уже отобранные + текущая) по атрибутам (Select Layer by Attributes). Подсказка: используйте двойное условие, в котором поле Remain сравнивается с 1, а поле OBJECTID сравнивается со значением Value, полученным на шаге 2.1.
+    1.2. Выбрать точки (уже отобранные + текущая) по атрибутам (__Select Layer by Attributes__). Подсказка: используйте двойное условие, в котором поле `Remain` сравнивается с $1$, а поле `OBJECTID` сравнивается со значением `Value`, полученным на шаге 2.1.
 
 2. _Поток 2_
 
-    2.1. Выбрать текущую точку с помощью итератора (Iterate Feature Selection)
+    2.1. Выбрать текущую точку с помощью итератора (__Iterate Feature Selection__)
     
-    2.2. Извлечь значение поля Importance (Get Field Value)
+    2.2. Извлечь значение поля `Importance` (__Get Field Value__)
     
-    2.3. Вычислить радиус буферной зоны (Calculate Value) как произведение Importance (2.2) и входного параметра Scale
+    2.3. Вычислить радиус буферной зоны (__Calculate Value__) как произведение `Importance` (2.2) и входного параметра _Scale_.
     
     2.4. Построить буферную зону, используя вычисленное значение 2.3 (Buffer)
 
-3. Довыбрать (SUBSET_SELECTION) буферной зоной (2.4) отобранные точки + текущую (1.2) с помощью пространственного запроса (Select Layer by Location). Внимание: в результате должны остаться только те точки, которые пересекаются буферной зоной!
-4. Подсчитать количество отобранных на шаге 3 точек (Get Count)
-5. Вычислить значение флага отбора точек, используя результат шага 4 (Calculate Value). Если выборка содержит 1 точку, то значение флага должно быть равно 1, если больше точек, то оно должно быть равно 2. Подсказка: тип выходного поля сделайте равным Long, но для вычисления используйте логическое выражение, результатом которого будет являться Ложь (0) или Истина (1).
-6. Вычислите поле Remain для текущей точки (2.1), используя значение флага отбора, полученное на шаге 5 (Calculate Field).
+3. Довыбрать (`SUBSET_SELECTION`) буферной зоной (2.4) отобранные точки + текущую (1.2) с помощью пространственного запроса (__Select Layer by Location__). 
+        > Внимание: в результате должны остаться только те точки, которые пересекаются буферной зоной!
+
+4. Подсчитать количество отобранных на шаге 3 точек (__Get Count__)
+5. Вычислить значение флага отбора точек, используя результат шага 4 (__Calculate Value__). Если выборка содержит 1 точку, то значение флага должно быть равно 1, если больше точек, то оно должно быть равно 2. Подсказка: тип выходного поля сделайте равным Long, но для вычисления используйте логическое выражение, результатом которого будет являться `Ложь (0)` или `Истина (1)`.
+6. Вычислите поле `Remain` для текущей точки (2.1), используя значение флага отбора, полученное на шаге 5 (__Calculate Field__).
 
 #### Реализация модели оценки условной графической нагрузки {-}
 
-Условная графическая нагрузка – средневзвешенное количество точек на единицу площади, где в качестве веса выступает размер точки, используемый  при ее отображении на карте 
+_Условная графическая нагрузка_ – средневзвешенное количество точек на единицу площади, где в качестве веса выступает размер точки, используемый  при ее отображении на карте 
 
 __Входные параметры:__
 
 1. Точечный слой
-2. Поле Size Field, отвечающее за графический вес точки (диаметр значка).
+2. Поле _Size Field_, отвечающее за графический вес точки (диаметр значка).
 3. Пространственное разрешение сетки (в метрах)
 
 __Требования к входным данным:__
-Поле Size Field должно содержать размеры значков, используемых для визуализации точек. Если значения всех размеров равны 1, вы получите обычную густоту точек на единицу площади
+
+Поле _Size Field_ должно содержать размеры значков, используемых для визуализации точек. Если значения всех размеров равны $1$, вы получите обычную густоту точек на единицу площади.
 
 Необходимо самостоятельно реализовать модель геообработки, которая:
 
-1. Строит регулярную сетку с заданным разрешением и охватом, покрывающим входной набор точек с небольшим запасом. Подсказка: вам необходимо построить горизонтальный ограничивающий прямоугольник (Minimum Bounding Geometry), буферизовать его на величину разрешения сетки (Buffer) и подать буфер в качестве экстента в инструмент генерации регулярной сетки (Create Fishnet).
-2. Подсчитывает суммарный графический вес точек в каждой ячейке и записывает результат в новое поле. Подсказка: вам понадобятся инструменты статистики (Tabulate Intersection), и присоединения поля (Join Field).
+1. Строит регулярную сетку с заданным разрешением и охватом, покрывающим входной набор точек с небольшим запасом. Подсказка: вам необходимо построить горизонтальный ограничивающий прямоугольник (__Minimum Bounding Geometry__), буферизовать его на величину разрешения сетки (__Buffer__) и подать буфер в качестве экстента в инструмент генерации регулярной сетки (__Create Fishnet__).
+2. Подсчитывает суммарный графический вес точек в каждой ячейке и записывает результат в новое поле. Подсказка: вам понадобятся инструменты статистики (__Tabulate Intersection__), и присоединения поля (__Join Field__).
 3. Сохраняет полученную сетку в выходной файл.
 
 #### Отбор населенных пунктов для карты масштаба 1:4 000 000 {-}
 
 В данной — заключительной — части задания необходимо произвести отбор населенных пунктов, используя собственные модели геообработки, а также произвести графическую оценку полученных результатов.
 
-Алгоритм выполнения задания:
+__Алгоритм выполнения задания:__
 
-1. Скачать данные OSM на территорию Субъекта Федерации
-2. Перепроецировать слой settlement-points в наилучшую проекцию для выбранной территории
-3. Сформировать поля Importance и Size, используя следующее отображение атрибутов:
+1. Скачать данные _OSM_ на территорию Субъекта Федерации
+2. Перепроецировать слой `settlement-points` в наилучшую проекцию для выбранной территории
+3. Сформировать поля `Importance` и `Size`, используя следующее отображение атрибутов:
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 rosstat::include_table('tables/pointsel_params.xlsx', caption = 'Параметры заполнения полей')
 ```
 
-4. Используя фрагмент данных и значения параметра Scale в диапазоне от 1000 до 10000 с шагом 1000, подобрать регрессионную зависимость между  значением параметра масштабирования Scale и средней графической нагрузкой (ед. на см2) в масштабе 1:4 000 000. Средняя графическая нагрузка оценивается как среднее значение по всем ненулевым ячейкам регулярной сетки. Размер сетки — 1 см2 в результирующем масштабе.
-5. Выполнить отбор населенных пунктов с графической нагрузкой 1, 3 и 5 населенных пункта на см2 для масштаба 1:4 000 000. Соответствующий параметр Scale подберите, используя найденную регрессионную зависимость. 
+4. Используя фрагмент данных и значения параметра _Scale_ в диапазоне от $1000$ до $10000$ с шагом $1000$, подобрать регрессионную зависимость между  значением параметра масштабирования Scale и средней графической нагрузкой ($ед.~на~см^2$) в масштабе $1:4~000~000$. Средняя графическая нагрузка оценивается как среднее значение по всем ненулевым ячейкам регулярной сетки. Размер сетки — $1~см^2$ в результирующем масштабе.
+5. Выполнить отбор населенных пунктов с графической нагрузкой $1$, $3$ и $5$ населенных пункта на $см^2$ для масштаба $1:4~000~000$. Соответствующий параметр _Scale_ подберите, используя найденную регрессионную зависимость. 
 6. Оформить результаты в виде картосхемы, отображающей:
     - границу региона
     - множество исходных точек бледно-серым цветом
