--- a/03-Points.Rmd
+++ b/03-Points.Rmd
@@ -6,7 +6,7 @@
 
 Для просмотра презентации щелкните на ней один раз левой кнопкой мыши и листайте, используя кнопки на клавиатуре:
 ```{r, echo=FALSE}
-knitr::include_url('https://tsamsonov.github.io/gen-course/slides/talk3_PointSelection.html#1', height = '400px')
+knitr::include_url('https://tsamsonov.github.io/gen-course/slides/talk3_PointSelection.html#1', height = '380px')
 ```
 
 > Презентацию можно открыть в отдельном окне или вкладке браузере. Для этого щелкните по ней правой кнопкой мыши и выберите соответствующую команду.
@@ -26,23 +26,24 @@ __Цель задания__ — освоение методики автомат
 
 #### Реализация алгоритма Settlement Spacing {-}
 
-Входные параметры:
+__Входные параметры:__
 
 1. Точечный слой (_Input Points_).
 2. Поле веса точки (_Importance Field_). Выносится в качестве параметра из инструмента __Get Field Value__ (2.2).
 3. Поле сохранения точки (_Remain Field_). Выносится в качестве параметра из инструмента __Calculate Field__ (6).
 4. Масштабирующий коэффициент (_Scale_). Вводится как свободный параметр типа _Double_.
 
-Требования к входным параметрам
+__Требования к входным параметрам:__
+
 1. Поля, указанные в параметрах _Importance Field_ и _Remain Field_ должны быть уже созданы в слое.
 2. Данные должны быть физически отсортированы в порядке увеличения поля `Importance` (чем больше значение этого поля, тем менее важной является точка). Для этого можно использовать инструмент __Sort__.
 3. Поле Remain по умолчанию должно быть пустым или заполненным нулями.
 
 Допустимые значения поля _Remain_:
 
-$0$ — флаг не установлен
-$1$ — точку необходимо оставить
-$2$ — точку необходимо убрать
+- $0$ — флаг не установлен.
+- $1$ — точку необходимо оставить.
+- $2$ — точку необходимо убрать.
 
 __Предусловия:__
 Необходимо расставить предусловия таким образом, чтобы каждый инструмент __A__, использующий вычисленное значение __B__, выполнялся после того как вычислится __B__.
